<resources>
    <string name="app_name">自由</string>

    <string name="cancel">cancel</string>
    <string name="confirm">ok</string>
    <string name="tv_introduce">## This file is automatically generated by Android Studio.
# Do not modify this file -- YOUR CHANGES WILL BE ERASED!
#
# This file must *NOT* be checked into Version Control Systems,
# as it contains information specific to your local configuration.
#
# Location of the SDK. This is only used by Gradle.
# For customization when using a Version Control System, please read the
# header note.
#Sun Feb 12 08:25:34 CST 2017
sdk.dir=D\:\\Java\\android-studio\\Android\\Sdk
        ## This file is automatically generated by Android Studio.
# Do not modify this file -- YOUR CHANGES WILL BE ERASED!
#
# This file must *NOT* be checked into Version Control Systems,
# as it contains information specific to your local configuration.
#
# Location of the SDK. This is only used by Gradle.
# For customization when using a Version Control System, please read the
# header note.
#Sun Feb 12 08:25:34 CST 2017
sdk.dir=D\:\\Java\\android-studio\\Android\\Sdk
        ## This file is automatically generated by Android Studio.
# Do not modify this file -- YOUR CHANGES WILL BE ERASED!
#
# This file must *NOT* be checked into Version Control Systems,
# as it contains information specific to your local configuration.
#
# Location of the SDK. This is only used by Gradle.
# For customization when using a Version Control System, please read the
# header note.
#Sun Feb 12 08:25:34 CST 2017
sdk.dir=D\:\\Java\\android-studio\\Android\\Sdk
</string>

    <string name="interest_in_circle">兴趣圈</string>
    <string name="topic_center">话题中心</string>
    <string name="original_rank">原创排行榜</string>
    <string name="all_rank">全区排行榜</string>
    <string name="shop">周边商城</string>
    <string name="game_center">游戏中心</string>
</resources>
